--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -19,10 +19,7 @@
   <script src="/components/angular-route/angular-route.js"></script>
   <script src="/components/famous/famous-global.js"></script>
   <script src="/components/famous-angular/dist/famous-angular.js"></script>
-  <script src="/assets/client.js"></script>
-  <style>
-
-  </style>
+  <script src="/assets/app.js"></script>
 </head>
   <body>
     <div ui-view></div>
