add fa-app wrapper

--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -18,6 +18,9 @@
   <script src="/assets/app.js"></script>
 </head>
   <body>
-    <div ui-view></div>
+    <fa-app fa-perspective="300" fa-perspective-origin="[0.5,0.5]">
+      <kioskmenu></kioskmenu>
+      <div ui-view></div>
+    </fa-app>
   </body>
 </html>
