move famous surface wrapper from jmap to home.html

--- a/app/modules/home/index.html
+++ b/app/modules/home/index.html
@@ -1,1 +1,5 @@
-<jmap></jmap>
+<fa-modifier fa-size="[1280, 720]" fa-origin="[0.5, 0.5]">
+  <fa-surface fa-background-color="'#444'" fa-color="'#fff'">
+    <jmap></jmap>
+  </fa-surface>
+</fa-modifier>
