Added Jibestream SDK

--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/assets/application.css?v=1">
   <link rel="stylesheet" href="/components/famous-angular/dist/famous-angular.css">
+  <script src="/components/jquery/dist/jquery.min.js"></script>
   <script src="/components/angular/angular.js"></script>
   <script src="/components/angular-animate/angular-animate.js"></script>
   <script src="/components/angular-touch/angular-touch.js"></script>
@@ -15,6 +16,7 @@
   <script src="/components/angular-route/angular-route.js"></script>
   <script src="/components/famous/famous-global.js"></script>
   <script src="/components/famous-angular/dist/famous-angular.js"></script>
+  <script src="/components/jibestream-sdk/JMapCore.js"></script>
   <script src="/assets/app.js"></script>
 </head>
   <body>
