--- a/app/modules/menu/menu.html
+++ b/app/modules/menu/menu.html
@@ -1,3 +1,14 @@
+Menu Toggle Button
 <fa-surface>
-  <button ng-click="toggleMenu()">Menu</button>
+  <button ng-click="menu.toggle()">Menu</button>
 </fa-surface>
+<!-- Menu -->
+<fa-modifier fa-size="[100, 100]" fa-translate="[0, 40]">
+  <fa-grid-layout fa-options="menuLayoutOptions">
+      <fa-modifier ng-repeat="item in menuItems" fa-translate="[0, 0, grid.z]" fa-rotate="grid.scale.get()">
+        <fa-surface fa-background-color="grid.bgColor" fa-touchstart="launch(item)" ng-mousedown="launch(item)" class="dbl-sided">
+          {{item.label}}
+        </fa-surface>
+      </fa-modifier>
+    </fa-grid-layout>
+</fa-modifier>
