--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="wfWayfinding">
+<html lang="en">
 <head>
   <title>Wayfinding Prototype</title>
   <meta charset="utf-8">
@@ -15,12 +15,12 @@
   <script src="/components/angular-route/angular-route.js"></script>
   <script src="/components/famous/famous-global.js"></script>
   <script src="/components/famous-angular/dist/famous-angular.js"></script>
-  <script src="/assets/app.js"></script>
 </head>
   <body>
     <fa-app fa-perspective="300" fa-perspective-origin="[0.5,0.5]">
       <kioskmenu></kioskmenu>
       <div ui-view></div>
     </fa-app>
+  <script src="/assets/app.js"></script>
   </body>
 </html>
