--- a/app/modules/menu/menu.html
+++ b/app/modules/menu/menu.html
@@ -7,7 +7,7 @@
   <fa-grid-layout fa-options="menuLayoutOptions" ng-show="menu.active">
       <fa-modifier ng-repeat="item in menuItems" fa-translate="[0, 0, grid.z]" fa-rotate="grid.scale.get()">
         <fa-surface fa-background-color="grid.bgColor" fa-touchstart="launch(item)" ng-mousedown="launch(item)" class="dbl-sided">
-          {{item.label}}
+          {{item.title}}
         </fa-surface>
       </fa-modifier>
     </fa-grid-layout>
