--- a/app/modules/menu/menu.html
+++ b/app/modules/menu/menu.html
@@ -1,12 +1,12 @@
 <!-- Menu Toggle Button -->
-<fa-surface>
+<!-- <fa-surface>
   <button ng-click="menu.toggle()">Menu</button>
-</fa-surface>
+</fa-surface> -->
 <!-- Menu -->
-<fa-modifier fa-size="[100, 100]" fa-translate="[0, 40]">
+<fa-modifier fa-size="[300, auto]" fa-translate="[0, 0]">
   <fa-grid-layout fa-options="menuLayoutOptions" ng-show="menu.active">
-      <fa-modifier ng-repeat="item in menuItems" fa-translate="[0, 0, grid.z]" fa-rotate="grid.scale.get()">
-        <fa-surface fa-background-color="grid.bgColor" fa-touchstart="launch(item)" ng-mousedown="launch(item)" class="dbl-sided">
+      <fa-modifier ng-repeat="item in menuItems">
+        <fa-surface fa-touchstart="launch(item)" ng-mousedown="launch(item)" class="menu-item">
           {{item.title}}
         </fa-surface>
       </fa-modifier>
