--- a/app/modules/home/home.html
+++ b/app/modules/home/home.html
@@ -12,7 +12,7 @@
       <input type="text" ng-model="search.query">
     </p>
     <ul>
-      <li ng-repeat="result in search.results">
+      <li ng-click="destinationClick(result.clientId)" ng-repeat="result in search.results" destinationId="{{result.clientId}}">
         {{result.name}}
       </li>
     </ul>
