nav engine updates

--- a/app/modules/home/home.html
+++ b/app/modules/home/home.html
@@ -21,3 +21,4 @@
     <fa-canvas-surface kiosk-gl-view></fa-canvas-surface>
   </fa-modifier>
 </fa-modifier>
+<!-- <fa-image-surface fa-image-url="https://westfieldus.box.com/shared/static/zvna30xzd9vmg3nwom1f.png"></fa-image-surface> -->
