--- a/app/modules/westfield-icons/icon.html
+++ b/app/modules/westfield-icons/icon.html
@@ -1,1 +1,1 @@
-<fa-image-surface fa-image-url="{{iconSrc}}" fa-size="[width, height]"></fa-image-surface>
+<fa-image-surface fa-image-url="{{iconSrc}}" fa-size="[width, height]" fa-click="click()"></fa-image-surface>
