--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -16,14 +16,14 @@
     <script src="/components/angular-resource/angular-resource.js"></script>
     <script src="/components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/components/angular-route/angular-route.js"></script>
-    <script src="/components/famous/famous-global.js"></script>
+    <script src="/components/famous/dist/famous-global.js"></script>
     <script src="/components/famous-angular/dist/famous-angular.js"></script>
     <script src="/components/jibestream-sdk/JMapCore.js"></script>
   </head>
   <body>
-    <fa-app fa-perspective="800" fa-perspective-origin="[0.5,0.5]">
-      <kioskmenu></kioskmenu>
+    <fa-app>
       <div ui-view></div>
+      <kioskmenu></kioskmenu>
     </fa-app>
   </body>
   <script src="/assets/app.js"></script>
