add scrolling fields to directory

--- a/app/modules/home/home.html
+++ b/app/modules/home/home.html
@@ -1,7 +1,7 @@
 <fa-view>
   <fa-modifier>
-    <fa-surface class="map-container">
-      <!-- <jmap></jmap> -->
+    <fa-surface class="map-container" fa-backgound-color="'red'">
+      <jmap></jmap>
     </fa-surface>
   </fa-modifier>
   <fa-modifier fa-size="[100, 100]" fa-origin="[0.9, 0]">
