--- a/app/modules/shopping/shopping.html
+++ b/app/modules/shopping/shopping.html
@@ -1,4 +1,41 @@
-<fa-view>
+<!-- <fa-view>
   <fa-image-surface fa-image-url="https://westfieldus.box.com/shared/static/7aw941jotnsgkdi1wj8t.png">
   </fa-surface>
-</fa-view>
+</fa-view> -->
+<fa-surface fa-background-color="'#eee'"></fa-surface>
+<fa-modifier>
+  <fa-header-footer-layout fa-options="{direction: 0, headerSize: 475, footerSize: 75}">
+
+    <!-- Category Filters -->
+    <fa-scroll-view fa-pipe-from="myEventHandler">
+      <fa-view ng-repeat="category in categories">
+        <fa-modifier fa-size="[undefined, 60]">
+          <!-- All events on fa-surfaces (click, mousewheel) are piped to $scope.myEventHandler -->
+           <fa-surface fa-background-color="'#fff'"
+                       fa-click="categoryClickHandler(category)"
+                       fa-pipe-to="myEventHandler"
+                       style="text-align: right; border-bottom: 1px solid white">
+                       <h3 style="text-align: right; padding-right: 2em;">{{category.name}}</h3>
+           </fa-surface>
+        </fa-modifier>
+      </fa-view>
+    </fa-scroll-view>
+
+    <!-- Results -->
+    <fa-scroll-view fa-pipe-from="myEventHandler2">
+      <fa-view ng-repeat="store in stores | filter:filterCategory">
+        <fa-modifier fa-size="[undefined, 60]">
+          <!-- All events on fa-surfaces (click, mousewheel) are piped to $scope.myEventHandler -->
+           <fa-surface fa-background-color="'#eee'"
+                       fa-color="'#333'"
+                       fa-pipe-to="myEventHandler2">
+                       <h2 style="padding-left: 2em;">{{store.name}}</h2>
+           </fa-surface>
+        </fa-modifier>
+      </fa-view>
+    </fa-scroll-view>
+
+    <!-- Headings -->
+    <fa-surface fa-background-color="'#888'">Footer</fa-surface>
+  </fa-header-footer-layout>
+</fa-modifier>
