--- a/app/modules/menu/menu.html
+++ b/app/modules/menu/menu.html
@@ -3,15 +3,15 @@
     <fa-grid-layout fa-options="menuLayoutOptions">
         <fa-modifier ng-repeat="item in menuItems">
         <fa-view>
-            <fa-surface ng-click="menu.handleTap(item)" class="menu-item">
-              <h1 ng-class="{inactive: !menu.active}" ng-click="menu.handleTap(item)" >
-                {{item.title}}
-              </h1>
-              <h3 ng-click="menu.handleTap(item)" ng-class="{inactive: !menu.active}">{{item.subtitle}}</h3>
+            <fa-surface class="menu-item" ng-class="{active: (activeMenuItem == item)}">
+              <h1 ng-class="{inactive: !menu.active}">{{item.title}}</h1>
+              <h3 ng-class="{inactive: !menu.active}">{{item.subtitle}}</h3>
             </fa-surface>
           <fa-modifier fa-translate="[30, 50]">
-            <icon glyph="item.icon" width="60" height="60" fa-click="menu.handleTap(item)"></icon>
+            <icon glyph="item.icon" width="60" height="60"></icon>
           </fa-modifier>
+          <!-- Click Handler Surface -->
+          <fa-surface fa-click="menu.handleTap(item)"></fa-surface>
         </fa-view>
         </fa-modifier>
       </fa-grid-layout>
