--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/components/famous-angular/dist/famous-angular.css">
     <script src="/components/jquery/dist/jquery.min.js"></script>
     <script src="/components/angular/angular.js"></script>
-    <script src="/components/angular-animate/angular-animate.js"></script>
     <script src="/components/angular-touch/angular-touch.js"></script>
     <script src="/components/angular-sanitize/angular-sanitize.js"></script>
     <script src="/components/angular-resource/angular-resource.js"></script>
@@ -21,7 +20,7 @@
     <script src="/components/jibestream-sdk/JMapCore.js"></script>
   </head>
   <body>
-    <fa-app>
+    <fa-app fa-perspective="250">
       <div ui-view></div>
       <kioskmenu></kioskmenu>
     </fa-app>
