--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -23,6 +23,7 @@
     <fa-app fa-perspective="250">
       <div ui-view></div>
       <kioskmenu></kioskmenu>
+      <card-stream></card-stream>
     </fa-app>
   </body>
   <script src="/assets/app.js"></script>
