--- a/app/public/layout.html
+++ b/app/public/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/application.css?v=1">
     <link rel="stylesheet" href="/components/famous-angular/dist/famous-angular.css">
     <script src="/components/jquery/dist/jquery.min.js"></script>
+    <script src="/components/d3/d3.min.js"></script>
     <script src="/components/angular/angular.js"></script>
     <script src="/components/angular-touch/angular-touch.js"></script>
     <script src="/components/angular-sanitize/angular-sanitize.js"></script>
