--- a/app/modules/jibestream-map/jmap.html
+++ b/app/modules/jibestream-map/jmap.html
@@ -1,57 +1,15 @@
-<style>
-
-/* Eventually use famous */
-
-/* Minified CSS - Less lines and can be replaced quickly. This is only for the loader animation. */
-#floatingCirclesG{position:relative;width:150px;height:150px;-webkit-transform:scale(0.6);transform:scale(0.6);display:block;margin:285px auto 0;}.f_circleG{position:absolute;background-color:#FFF;height:27px;width:27px;-webkit-border-radius:14px;-webkit-animation-name:f_fadeG;-webkit-animation-duration:.8s;-webkit-animation-iteration-count:infinite;-webkit-animation-direction:linear;border-radius:14px;animation-name:f_fadeG;animation-duration:.8s;animation-iteration-count:infinite;animation-direction:linear}#frotateG_01{left:0;top:61px;-webkit-animation-delay:.3s;animation-delay:.3s}#frotateG_02{left:18px;top:18px;-webkit-animation-delay:.4s;animation-delay:.4s}#frotateG_03{left:61px;top:0;-webkit-animation-delay:.5s;animation-delay:.5s}#frotateG_04{right:18px;top:18px;-webkit-animation-delay:.6s;animation-delay:.6s}#frotateG_05{right:0;top:61px;-webkit-animation-delay:.7s;animation-delay:.7s}#frotateG_06{right:18px;bottom:18px;-webkit-animation-delay:.8s;animation-delay:.8s}#frotateG_07{left:61px;bottom:0;-webkit-animation-delay:.9s;animation-delay:.9s}#frotateG_08{left:18px;bottom:18px;-webkit-animation-delay:1s;animation-delay:1s}@-webkit-keyframes f_fadeG{0%{background-color:#000}100%{background-color:#FFF}}@keyframes f_fadeG{0%{background-color:#000}100%{background-color:#FFF}}
-
-#loading-container{
-	width: 100%;
-	height:100%;
-	/*background-color: #444;*/
-	z-index:2;
-}
-
-#map-container{
-    width: 100%;
-    height:100%;
-    opacity: 0;
-}
-
-.st3:hover{
-	fill: #fff;
-}
-
-
-
-/**** Pop Up ****/
-#popup-render-container{
-	display:none;
-}
-
-
-
-
-</style>
-
-<div id="loading-container">
+<div id="loading-container" ng-if="isLoading">
 	<div id="floatingCirclesG">
 		<div class="f_circleG" id="frotateG_01"></div><div class="f_circleG" id="frotateG_02"></div><div class="f_circleG" id="frotateG_03"></div><div class="f_circleG" id="frotateG_04"></div><div class="f_circleG" id="frotateG_05"></div><div class="f_circleG" id="frotateG_06"></div><div class="f_circleG" id="frotateG_07"></div><div class="f_circleG" id="frotateG_08"></div>
 	</div>
 </div>
-
-
 <div id="map-container"></div>
-
-
 <div id="popup-render-container">
 	<div class="popup-container">
 		<div class="popup-image">
-			<img src="{{imgurl}}" />
+			<img ng-src="{{imgurl}}" />
 		</div>
-		
 		<div class="popup-text">{{description}}</div>
-
 		<div click="" class="popup-button">
 			Click here for directions
 		</div>
