Tried fixing rendering issue

--- a/app/modules/jibestream-map/jmap.html
+++ b/app/modules/jibestream-map/jmap.html
@@ -47,7 +47,7 @@
 <div id="popup-render-container">
 	<div class="popup-container">
 		<div class="popup-image">
-			<img src="{{imgurl}}" />
+			<img src="" />
 		</div>
 		
 		<div class="popup-text">{{description}}</div>
