--- a/app/modules/jibestream-map/jmap.html
+++ b/app/modules/jibestream-map/jmap.html
@@ -1,9 +1,4 @@
-<div id="loading-container" ng-if="isLoading">
-	<div id="floatingCirclesG">
-		<div class="f_circleG" id="frotateG_01"></div><div class="f_circleG" id="frotateG_02"></div><div class="f_circleG" id="frotateG_03"></div><div class="f_circleG" id="frotateG_04"></div><div class="f_circleG" id="frotateG_05"></div><div class="f_circleG" id="frotateG_06"></div><div class="f_circleG" id="frotateG_07"></div><div class="f_circleG" id="frotateG_08"></div>
-	</div>
-</div>
-<div id="map-container"></div>
+<div class="map-container"></div>
 <div id="popup-render-container">
 	<div class="popup-container">
 		<div class="popup-image">
