enable shopping directory

--- a/app/modules/dining/dining.html
+++ b/app/modules/dining/dining.html
@@ -1,7 +1,8 @@
 <fa-view>
-  <fa-surface>
-  <div class="dining section">
-    <h1>Dining!</h1>
-  </div>
-  </fa-surface>
+    <fa-modifier fa-translate="[0,0,-2]">
+      <fa-image-surface fa-background-color="'#222'" fa-image-url="directoryBG.jpg"></fa-image-surface>
+    </fa-modifier>
+  <fa-modifier>
+   <directory></directory>
+  </fa-modifier>
 </fa-view>
