add dining bg, directory title control, Category Service getChildCategoriesOf()

--- a/app/modules/dining/dining.html
+++ b/app/modules/dining/dining.html
@@ -1,6 +1,6 @@
 <fa-view>
     <fa-modifier fa-translate="[0,0,-2]">
-      <fa-image-surface fa-background-color="'#222'" fa-image-url="directoryBG.jpg"></fa-image-surface>
+      <fa-image-surface fa-background-color="'#222'" fa-image-url="/diningBG.png"></fa-image-surface>
     </fa-modifier>
   <fa-modifier>
    <directory></directory>
