--- a/app/modules/directory/directory.html
+++ b/app/modules/directory/directory.html
@@ -38,7 +38,7 @@
       fa-size="[1200, 200]"
       >
       <fa-surface>
-        <h1 class="bigLightText">Shopping</h1>
+        <h1 class="bigLightText">{{directoryTitle}}</h1>
       </fa-surface>
     </fa-modifier>
     <fa-modifier
