--- a/app/modules/map/map.html
+++ b/app/modules/map/map.html
@@ -1,6 +1,5 @@
 <fa-view>
-  <!-- <fa-image-surface fa-image-url="https://westfieldus.box.com/shared/static/zvna30xzd9vmg3nwom1f.png"></fa-image-surface> -->
-  <fa-surface fa-background-color="'#222'">
+  <fa-surface>
     <jmap></jmap>
   </fa-surface>
 </fa-view>
