add largescreen base view

--- a/app/modules/menu/menu.html
+++ b/app/modules/menu/menu.html
@@ -11,7 +11,7 @@
             <icon glyph="item.icon" width="60" height="60"></icon>
           </fa-modifier>
           <!-- Click Handler Surface -->
-          <fa-surface fa-touchstart="menu.handleTap(item)"></fa-surface>
+          <fa-surface fa-click="menu.handleTap(item)"></fa-surface>
         </fa-view>
         </fa-modifier>
       </fa-grid-layout>
