--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -1,29 +1,40 @@
 <fa-view>
   <fa-image-surface fa-image-url="bigBG.jpg"></fa-image-surface>
   <largescreen-directory></largescreen-directory>
+
+
   <fa-header-footer-layout fa-options="{direction: 1, headerSize: 250, footerSize: 175}">
+
     <fa-view>
       <fa-surface fa-background-color="'rgba(0,0,0,0.1)'"></fa-surface>
     </fa-view>
 
-    <fa-scroll-view fa-pipe-from="myEventHandler" fa-options="options.myScrollView">
-      <fa-view ng-repeat="view in pages">
-        <fa-modifier fa-size="[1000, undefined]">
-           <fa-grid-view fa-options="page.gridOptions">
-             <fa-modifier ng-repeat="item in page.items" fa-size="[undefined, 60]">
-               <fa-surface fa-background-color="'yellow'">
-                  {{item.text}}
-               </fa-surface>
-             </fa-modifier>
-           </fa-grid-view>
-          </fa-modifier>
-      </fa-view>
-    </fa-scroll-view>
+    <fa-view>
 
+      <fa-surface fa-background-color="'rgba(255,255,255,0.9)'"></fa-surface>
+      <fa-scroll-view fa-pipe-from="myEventHandler" fa-options="options.myScrollView">
+          <fa-view ng-repeat="page in pages">
+            <fa-modifier fa-size="[1000, page.gridHeight]" fa-translate="[0,0,0.01]">
+              <fa-grid-layout fa-options="page.gridOptions">
+                <fa-modifier ng-repeat="item in page.items track by $index">
+                  <fa-surface fa-pipe-to="myEventHandler" fa-click="handleItemClick(item)" fa-size="[undefined, gridItemHeight]">
+                    <h2 ng-if="item.category">{{item.name}}</h2>
+                    <p ng-if="!item.category">{{item.name}}</p>
+                  </fa-surface>
+                </fa-modifier>
+              </fa-grid-layout>
+            </fa-modifier>
+          </fa-view>
+      </fa-scroll-view>
+
+    </fa-view>
 
     <fa-view>
       <fa-surface fa-background-color="'rgba(0,0,0,0.2)'"></fa-surface>
     </fa-view>
+
   </fa-header-footer-layout>
+
+
   <largescreen-sidebar></largescreen-sidebar>
 </fa-view>
