fix issue where last page would be off screen in large directory

--- a/app/modules/largescreen/largescreen.html
+++ b/app/modules/largescreen/largescreen.html
@@ -7,7 +7,7 @@
     <fa-view></fa-view>
 
     <fa-view>
-      <fa-modifier fa-translate="[pageInset,0,0]">
+      <fa-modifier fa-translate="[pageInset,0,0]" fa-size="scrollViewSize">
       <fa-scroll-view fa-pipe-from="myEventHandler" fa-options="options.myScrollView">
         <fa-modifier fa-size="[pageWidth, undefined]" ng-repeat="page in pages">
           <fa-modifier fa-size="[(pageWidth - pageGutter), undefined]">
