--- a/app/modules/card-stream/card-stream.html
+++ b/app/modules/card-stream/card-stream.html
@@ -1,7 +1,9 @@
 <fa-view ng-show="cardStream.show">
-  <fa-modifier fa-translate="[0,0,10]">
-  <fa-surface fa-background-color="'rgba(0,0,0,0.8)'" ng-if="cardStream.shown" fa-click="cardStream.hide()" fa-animate-enter="cardAnimateEnter()"></fa-surface>
+  <!-- Background overlay -->
+  <fa-modifier fa-translate="[0,0,10]" fa-opacity="0.25">
+    <fa-surface fa-background-color="'rgba(0,0,0,0.8)'" ng-if="cardStream.shown" fa-click="cardStream.hide()"></fa-surface>
   </fa-modifier>
+
   <fa-modifier fa-size="[800, 600]" fa-align="[0.5, 0.5]" fa-origin="[0.5, 0.5]" fa-scale="[0.7,0.7]" fa-translate="cardStream.boxTransitionable.get()">
     <fa-surface fa-background-color="'#fff'" ng-if="cardStream.shown">
       <div ng-if="cardStream.currentStore._links.store_front.href" style="background-size: cover; background-position: center; height: 15em; background-image: url({{cardStream.currentStore._links.store_front.href}});"></div>
